@@ -2,6 +2,7 @@ Changes from 1.5.0 to 1.6.0
 ---------------------------
 
 ** Bug
+    * [FELIX-2957] - Filter scope should be an array
     * [FELIX-2943] - Component generated by @SlingServlet does not match default settings of @Component
 
 ** Improvement
